--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-#fet fdsgfsgdfgfd gdfg df
+
 name: Go
 
 on:
@@ -24,41 +24,58 @@ jobs:
     - name: Build
       run: make build
 
-    - name: Test
-      run: make test
-
-    - name: Package .deb
-      run: make deb
-
-    - name: Upload .deb artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: lab-deb-package
-        path: myprogram.deb
-  deploy:
+  test:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.24'
+
+    - name: Test
+      run: make test
+  package:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.24'
+
+    - name: Package .deb      
+      run: make deb
+    - name: deb artifact
+      uses: actions/upload-artifact@v4      
+      with:
+        name: deb-package_2        
+        path: myprogram.deb
+  deploy:    
+    needs: package
+    runs-on: ubuntu-latest    
+    steps:
+      - uses: actions/checkout@v4      
       - name: Download .deb artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v4        
         with:
-          name: lab-deb-package
+          name: deb-package_2          
           path: .
-      - name: Build Docker image
+      - name: Build Docker image        
         run: |
-          docker build -t my-lab-app .
-          
-      - name: Run Docker container
+          docker build -t my-lab-app .          
+      - name: Run Docker container        
         run: |
-          docker run --rm my-lab-app --success
-          
-      - name: Save Docker image as tar file
+          docker run --rm my-lab-app --success          
+      - name: Save Docker image as tar file        
         run: |
           docker save -o my-lab-app.tar my-lab-app
-
-      - name: Upload Docker image as artifact
+      - name: Upload Docker image as artifact        
         uses: actions/upload-artifact@v4
         with:
-          name: my-lab-app
+          name: my-lab-app          
           path: my-lab-app.tar
