--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,6 +55,22 @@ jobs:
       with:
         name: deb-package_2        
         path: myprogram.deb
+  start:
+    needs: package
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Download .deb artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: deb-package_2
+        path: .
+    - name: Install .deb package
+      run: |
+        sudo dpkg -i myprogram.deb || sudo apt-get install -f -y
+    - name: Run program
+      run: |
+        lab --success
   deploy:    
     needs: package
     runs-on: ubuntu-latest    
