--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
@@ -10,7 +7,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -25,8 +21,8 @@ jobs:
       run: make build
 
   test:
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@v4
 
@@ -34,12 +30,16 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.24'
+
+    - name: Install dependencies
+      run: make install
 
     - name: Test
       run: make test
+
   package:
-    needs: test
     runs-on: ubuntu-latest
+    needs: test
     steps:
     - uses: actions/checkout@v4
 
@@ -48,51 +48,44 @@ jobs:
       with:
         go-version: '1.24'
 
-    - name: Package .deb      
+    - name: Build
+      run: make build
+
+    - name: Package .deb
       run: make deb
-    - name: deb artifact
-      uses: actions/upload-artifact@v4      
+
+    - name: Upload .deb artifact
+      uses: actions/upload-artifact@v4
       with:
-        name: deb-package_2        
+        name: lab-deb-package
         path: myprogram.deb
-  start:
-    needs: package
+
+  deploy:
     runs-on: ubuntu-latest
+    needs: package
     steps:
     - uses: actions/checkout@v4
+
     - name: Download .deb artifact
       uses: actions/download-artifact@v4
       with:
-        name: deb-package_2
+        name: lab-deb-package
         path: .
-    - name: Install .deb package
+
+    - name: Build Docker image
       run: |
-        sudo dpkg -i myprogram.deb || sudo apt-get install -f -y
-    - name: Run program
+        docker build -t my-lab-app .
+
+    - name: Run Docker container
       run: |
-        lab --success
-  deploy:    
-    needs: package
-    runs-on: ubuntu-latest    
-    steps:
-      - uses: actions/checkout@v4      
-      - name: Download .deb artifact
-        uses: actions/download-artifact@v4        
-        with:
-          name: deb-package_2          
-          path: .
-      - name: Build Docker image        
-        run: |
-          chmod +x lab
-          docker build -t my-lab-app .          
-      - name: Run Docker container        
-        run: |
-          chmod +x lab         
-      - name: Save Docker image as tar file        
-        run: |
-          docker save -o my-lab-app.tar my-lab-app
-      - name: Upload Docker image as artifact        
-        uses: actions/upload-artifact@v4
-        with:
-          name: my-lab-app          
-          path: my-lab-app.tar
+        docker run --rm my-lab-app
+
+    - name: Save Docker image as tar file
+      run: |
+        docker save -o my-lab-app.tar my-lab-app
+
+    - name: Upload Docker image as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: my-lab-app
+        path: my-lab-app.tar
